frontend/css/style.css
:root {
  /* Fonts */
  --font-family: "Fira Sans", sans-serif;
  --font-family-monospaced: "Fira Mono", monospace;
  --font-family-editor: "Source Code Pro", monospace;

  /* Scale of z-index values */
  --z-index-floating-ui: 1;
  --z-index-autocomplete: 2;
  --z-index-overlay: 3;
  --z-index-keyboard-overlays: 4;

  /* Base colors */
  --error: hsl(0deg 100% 30%);
  --warning: hsl(52deg 84% 56%);
  --red: var(--error);
  --yellow: var(--warning);
  --green: hsl(151deg 100% 25%);
  --gray: #aaa;
  --transparent-black: hsl(0deg 0% 0% / 50%);
  --transparent-white: hsl(0deg 0% 100% / 50%);
  --background: #fff;
  --background-darker: hsl(0deg 0% 85%);
  --text-color: hsl(0deg 0% 27%);
  --text-color-lighter: hsl(0deg 0% 33%);
  --text-color-lightest: hsl(0deg 0% 47%);
  --link-color: hsl(203deg 100% 32%);
  --link-hover-color: hsl(0deg 0% 33%);
  --heading-color: #333;
  --code-background: hsl(0deg 0% 97%);
  --border: hsl(0deg 0% 85%);
  --border-darker: hsl(0deg 0% 80%);

  /* Box shadows */
  --box-shadow-button: 0 0 5px hsl(0deg 0% 50% / 50%);
  --box-shadow-dropdown: 3px 3px 3px hsl(0deg 0% 50% / 50%);
  --box-shadow-kbd: inset 0 -1px 0 var(--border-darker);
  --box-shadow-overlay: 0 0 20px var(--overlay-wrapper-background);

  /* Buttons */
  --button-color: #fff;
  --button-background: hsl(203deg 100% 32%);
  --button-muted-color: var(--text-color);
  --button-muted-background: var(--background-darker);

  /* Sidebar */
  --sidebar-color: #444;
  --sidebar-hover-color: var(--link-color);
  --sidebar-background: hsl(0deg 0% 96%);
  --sidebar-border: hsl(0deg 0% 87%);

  /* Details */
  --summary-background: hsl(0deg 0% 95%);
  --summary-background-darker: hsl(0deg 0% 90%);

  /* Header */
  --header-color: #fff;
  --header-background: hsl(203deg 100% 32%);
  --header-placeholder-color: hsl(203deg 47% 66%);
  --header-placeholder-background: hsl(203deg 56% 45%);

  /* Tables */
  --table-header-text: hsl(0deg 0% 40%);
  --table-header-background: hsl(0deg 0% 90%);
  --table-border: hsl(0deg 0% 90%);
  --table-background-even: hsl(0deg 0% 95%);
  --treetable-expander: #afc1d3;
  --budget-negative: #af3d3d;
  --budget-positive: #3daf46;

  /* Editor */
  --editor-comment: #998;
  --editor-directive: #333;
  --editor-class: #b84;
  --editor-date: #099;
  --editor-constant: #008080;
  --editor-account: var(--link-color);
  --editor-invalid: #333;
  --editor-invalid-background: rgb(255 199 199 / 50%);
  --editor-activeline: #ffc;
  --editor-currencies: #708;
  --editor-label-name: #221198;
  --editor-number: #116543;
  --editor-string: #a91111;

  /* Misc */
  --notification-color: #fff;
  --chart-axis: #999;
  --autocomplete-match: #ffd27c;
  --mobile-button-text: #000;
  --placeholder-color: var(--text-color-lightest);
  --placeholder-background: var(--background);
  --dragover-background: hsl(203deg 100% 32% / 50%);
  --overlay-wrapper-background: rgb(0 0 0 / 50%);

  /* Help pages */
  --help-sidebar-background: #f8f8f8;
  --help-sidebar-border: #eaeaea;
}

@media (prefers-color-scheme: dark) {
  :root {
    /* Base colors */
    --heading-color: #d7dce2;
    --text-color: hsl(0deg 0% 75%);
    --text-color-darker: hsl(0deg 0% 25%);
    --text-color-lighter: hsl(0deg 0% 85%);
    --link-color: hsl(203deg 100% 45%);
    --link-hover-color: hsl(0deg 0% 45%);
    --code-background: hsl(0deg 0% 25%);
    --background: hsl(200deg 6% 15%);
    --background-darker: hsl(200deg 5% 30%);
    --border: hsl(0deg 0% 35%);
    --border-darker: hsl(0deg 0% 30%);

    /* Box shadows */
    --box-shadow-dropdown: 3px 3px 3px hsl(0deg 0% 25% / 50%);

    /* Sidebar */
    --sidebar-background: hsl(200deg 5% 18%);
    --sidebar-color: hsl(0deg 0% 73%);
    --sidebar-border: hsl(200deg 5% 25%);

    /* Details */
    --summary-background: hsl(0deg 0% 45%);
    --summary-background-darker: hsl(0deg 0% 40%);

    /* Header */
    --header-color: #fff;
    --header-background: hsl(203deg 100% 25%);

    /* Tables */
    --table-header-text: hsl(0deg 0% 80%);
    --table-header-background: var(--sidebar-background);
    --table-border: var(--sidebar-border);
    --table-background-even: hsl(0deg 0% 18%);

    /* Editor */
    --editor-comment: #998;
    --editor-directive: #c6c6c6;
    --editor-class: #e1a759;
    --editor-date: #0ad3d3;
    --editor-constant: #02a0a0;
    --editor-account: var(--link-color);
    --editor-invalid: #d5c5c5;
    --editor-invalid-background: rgb(176 82 82 / 50%);
    --editor-activeline: #ffc;
    --editor-currencies: #cd00e8;
    --editor-label-name: #9c90f6;
    --editor-number: #00b672;
    --editor-string: #e87f7f;

    /* Misc */
    --placeholder-color: var(--text-color-lighter);
    --placeholder-background: hsl(222deg 7% 29%);
    --mobile-button-text: #cacaca;

    /* Help pages */
    --help-sidebar-background: #3b3b3b;
    --help-sidebar-border: #2a2a2a;

    .journal .balance {
      --entry-background: #175817;
    }

    .journal .close {
      --entry-background: hsl(0deg 0% 70%);

      p .flag,
      a:link {
        color: var(--text-color-darker);
      }
    }

    .journal .custom {
      --entry-background: #e8bd00;

      p .flag,
      a:link {
        color: var(--text-color-darker);
      }
    }

    .journal .document {
      --entry-background: #9b3b9b;

      p .flag,
      a:link {
        color: var(--text-color);
      }
    }

    .journal .note {
      --entry-background: #3a6596;

      p .flag,
      a:link {
        color: var(--text-color);
      }
    }

    .journal .open {
      --entry-background: hsl(0deg 0% 83%);

      p .flag,
      a:link {
        color: var(--text-color-darker);
      }
    }

    .journal .other {
      --entry-background: #9ed0d0;

      p .flag,
      a:link {
        color: var(--text-color-darker);
      }
    }

    .journal .pad {
      --entry-background: #59baba;
    }

    .journal .pending {
      --entry-background: #952445;

      a:link {
        color: var(--text-color);
      }
    }

    .journal .query {
      --entry-background: #83ace2;

      p .flag,
      a:link {
        color: var(--text-color-darker);
      }
    }

    .journal .budget {
      --entry-background: #caaa7c;

      p .flag,
      a:link {
        color: var(--text-color-darker);
      }
    }

    .journal {
      --journal-postings: hsl(0deg 0% 10%);
      --journal-hover-highlight: #4e4e4e9c;
    }

    input,
    textarea {
      background: var(--placeholder-background);
    }

    .cm-tooltip {
      background-color: #484c4f;
    }
  }
}

.journal .balance {
  --entry-background: #cfc;
}

.journal .close {
  --entry-background: hsl(0deg 0% 70%);
}

.journal .custom {
  --entry-background: #fff3ab;
}

.journal .document {
  --entry-background: #ffc8ff;
}

.journal .note {
  --entry-background: #aad0ff;
}

.journal .open {
  --entry-background: hsl(0deg 0% 92%);
}

.journal .other {
  --entry-background: #cff;
}

.journal .pad {
  --entry-background: #8ff;
}

.journal .pending {
  --entry-background: #f8a;
}

.journal .query {
  --entry-background: #aad0ff;
}

.journal .budget {
  --entry-background: #ffddae;
}

.journal {
  --journal-postings: hsl(0deg 0% 92%);
  --journal-metadata: hsl(210deg 44% 67%);
  --journal-tag: hsl(210deg 61% 64%);
  --journal-link: hsl(203deg 39% 85%);
  --journal-posting-indicator: hsl(203deg 24% 80%);
  --journal-metadata-indicator: hsl(203deg 24% 40%);
  --journal-hover-highlight: #f5f5f59c;
}

